[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pump-bot-worker"
version = "2.0.0"
description = "Autonomous Pump Bot Worker for Solana Trading"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pump Bot Team", email = "team@pumpbot.io"}
]
keywords = ["solana", "trading", "bot", "pump", "worker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "websockets>=12.0",
    "httpx>=0.25.0",
    "solana>=0.32.0",
    "solders>=0.18.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
    "nacl>=1.5.0",
    "base58>=2.1.1",
    "orjson>=3.9.10",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
    "psutil>=5.9.6",
    "click>=8.1.7",
    "rich>=13.7.0",
    "python-dateutil>=2.8.2",
    "aiofiles>=23.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "memory-profiler>=0.61.0"
]

monitoring = [
    "grafana-client>=3.5.0",
    "influxdb-client>=1.38.0"
]

notifications = [
    "discord.py>=2.3.0",
    "python-telegram-bot>=20.6"
]

[project.urls]
Homepage = "https://github.com/your-org/pump-bot-worker"
Documentation = "https://docs.pumpbot.io"
Repository = "https://github.com/your-org/pump-bot-worker.git"
"Bug Tracker" = "https://github.com/your-org/pump-bot-worker/issues"

[project.scripts]
pump-worker = "src.worker_app:main"
worker-health = "scripts.health_check:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "solana.*",
    "solders.*",
    "anchorpy.*",
    "base58.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]
